vlib/v/checker/tests/run/json_encode_generic_interface.vv
import json

interface Interface {}

struct Result[T] {
	data []T
}

fn main() {
	println(json.encode(Result[Interface]{}))
}
